Append Particles System not working properly #62570

Closed
opened 2019-03-14 14:51:52 +01:00 by Marco · 6 comments
Member

System Information
Operating system: Ubuntu 18.04.2 64bit
Graphics card: AMD RX 580 (8GB)

Blender Version
Broken: 2.80, a38205fbd8, master, 2019-03-13

Short description of error
You already fixed this bug here https://developer.blender.org/T61141 some times ago,
but now there is the same issue: appending a particles system, seen from the outliner, appends the objects of the collection of the particles system in the selected collection, without their collection container:

Exact steps for others to reproduce the error
I created a blend file and made a particles system with a sphere, a cube and a cone.
1.jpg

I then opened a new project and appended the particles settings from the saved blend file
2.jpg

As you can see Blender appended the 3 objects in the selected collection, without their proper collection container

**System Information** Operating system: Ubuntu 18.04.2 64bit Graphics card: AMD RX 580 (8GB) **Blender Version** Broken: 2.80, a38205fbd801, master, 2019-03-13 **Short description of error** You already fixed this bug here https://developer.blender.org/T61141 some times ago, but now there is the same issue: appending a particles system, seen from the outliner, appends the objects of the collection of the particles system in the selected collection, without their collection container: **Exact steps for others to reproduce the error** I created a blend file and made a particles system with a sphere, a cube and a cone. ![1.jpg](https://archive.blender.org/developer/F6821825/1.jpg) I then opened a new project and appended the particles settings from the saved blend file ![2.jpg](https://archive.blender.org/developer/F6821851/2.jpg) As you can see Blender appended the 3 objects in the selected collection, without their proper collection container
Author
Member

Added subscriber: @nacioss

Added subscriber: @nacioss

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-03-14 15:22:57 +01:00

Using the .blend file from the previous issue #61141.blend
I'm able to reproduce this.

If I untick the Active Collection append flag, the objects are given their own collection, but it doesn't have the right name.
However, the particle system still works but it lists the wrong name in the settings. IE the instance collection is still Particles while the appended collection is now named Collection 2

Using the .blend file from the previous issue [#61141.blend](https://archive.blender.org/developer/F6505731/T61141.blend) I'm able to reproduce this. If I untick the `Active Collection` append flag, the objects are given their own collection, but it doesn't have the right name. However, the particle system still works but it lists the wrong name in the settings. IE the instance collection is still `Particles` while the appended collection is now named `Collection 2`

Arg… Most likely broken by fix for #61796…

We want a different behavior between link (where we should not instantiate anything indirectly linked) and append (where we want to link all collections in current scene, since their objects will be made local and hence will need to have some scene instantiation anyway).

Arg… Most likely broken by fix for #61796… We want a different behavior between link (where we should not instantiate anything indirectly linked) and append (where we want to link all collections in current scene, since their objects will be made local and hence will need to have some scene instantiation anyway).

This issue was referenced by 887d052e56

This issue was referenced by 887d052e56a515145f4dd7433e49c91c5d149169

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62570
No description provided.